# co-optimization-two-phase

./: .gitignore  LICENCE  README.md  all_plots_background.sh  demo_kevincoadapting.sh  fix_mess_robogrammar.py  requirements.txt  setup.sh
animations_for_the_paper/complexity_example/: README.md
animations_for_the_paper/tiny_quantity_vs_length_gymrem2d/: README.md
animations_for_the_paper/tiny_quantity_vs_length_robogrammar/: README.md
cluster_scripts/: launch_one_evogym.sl  launch_one_jorgenrem.sl  launch_one_jorgenrem_tune.sl  launch_one_robogrammar.sl
other_repos/RoboGrammar/: .gitignore  CMakeLists.txt  build.sh
other_repos/RoboGrammar/core/: CMakeLists.txt
other_repos/RoboGrammar/core/include/robot_design/: glfw_viewer.h  optim.h  sim.h
other_repos/RoboGrammar/core/src/: glfw_viewer.cpp  optim.cpp  sim.cpp
other_repos/RoboGrammar/examples/design_search/: design_search.py  mcts.py  viewer.py
other_repos/RoboGrammar/examples/graph_learning/: Preprocessor.py  RobotGrammarEnv.py  heuristic_search_algo_mpc.py  plot_convergence.py
other_repos/RoboGrammar/examples/python_bindings/: CMakeLists.txt  py_optim.cpp  py_render.cpp  py_sim.cpp  setup.py
other_repos/RoboGrammar/examples/rule_viewer/: CMakeLists.txt
other_repos/evogym/: setup.py
other_repos/gymrem2d/: README.md  requirements.txt  setup.sh
scripts/: evogym_experiment.py
src/: NestedOptimization.py  evogym_experiment.py  gymrem2d_experiment.py  jorgenrem_experiment.py  kevincoadapting_experiment.py  plot_src.py  robogramar_experiment.py  robogrammar_experiment.py  tholiao_experiment.py
(+135 files in other folders)
